src/test/resources/accept/emptyWhileStatementBlock.ul
int bar ()
{
    int id1;

    while (true) {
    }
}
