src/test/resources/reject/elseKeywordAsId.ul
int id1 ()
{
    else;
}
